[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beneath"
version = "0.1.0"
description = "Linux syscall introspection and security TUI using strace"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "beneath" }]
dependencies = [
  "pandas>=2.0",
  "matplotlib>=3.8",
  "rich>=13.7"
]

[project.scripts]
beneath = "beneath.main:main"

[tool.setuptools]
packages = ["beneath"]
